Do not use UnmodifiableList in auto compaction (#9535)